--- a/css/dam-slide.css
+++ b/css/dam-slide.css
@@ -6,7 +6,7 @@
 
 .navbar img {
     width: 500px;
-    /* align-items: left; */
+    align-items: left;
 }
 
 .navbar a {
@@ -19,13 +19,13 @@
 }
 
 .navbar {
-    /* display: inline-flex; */
-    /* position: absolute; */
+    display: inline-flex; 
+    position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100vh;
-    /* display: flex; */
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -68,7 +68,7 @@ body {
     50%{
         transform: translateX(-100%);
     }
-    /* 55%{
+    55%{
         transform: translateX(-200%);
     }
     75%{
@@ -79,7 +79,14 @@ body {
     }
     95%{
         transform: translateX(-300%);
-    } */
+    }
+    100%{
+        transform: translateX(-300%);
+    }
+
+    110%{
+        transform: translateX(-300%);
+    }
  
 }   
 
