--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -294,3 +294,13 @@
         font-size: 18px;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .container-servico {
+        margin-top: 100px;
+        height: 10%;
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+    }
+}
