--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -67,7 +67,7 @@
         display: inline-block;
         flex-direction: column;
         align-items: flex-start;
-        margin-top: 50px;
+        margin-top: 80px;
 
     }
 
@@ -77,6 +77,14 @@
 
     .slide img {
         width: 500px;
+    }
+    section .mapas img {
+        display: block;
+        width: 2000px;
+        
+    }
+    section .contato h2 {
+        margin-top: 50px;
     }
 }
 
